--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8"/>
     <title>Amilk</title>
     <link type="text/css" rel="stylesheet" href="css/helloworld.css">
+    <script type="text/javascript" src="js/base/jQuery.js"></script>
 </head>
     <body>
         <div class="hello">hello world</div>
+        <div class="hello"><button id="but">hello</button></div>
     </body>
+<script type="text/javascript" src="js/index.js"></script>
 </html>
