--- a/webapp/index.html
+++ b/webapp/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
+    <link trl="shortcot icon" type="image/x-icon" href="favicon.ico"/>
     <title>Amilk</title>
     <link type="text/css" rel="stylesheet" href="css/helloworld.css">
     <script type="text/javascript" src="js/base/jQuery.js"></script>
